--- a/src/App.css
+++ b/src/App.css
@@ -1,164 +1,220 @@
-@import url('https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@400;500;700&family=Poppins:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@400;500;700&family=Poppins:wght@300;400;500&display=swap");
 
 :root {
-    --lg-font: 'Kaisei Tokumin', serif;
-    --sm-font: 'Poppins', sans-serif;
-    --green: green;
+  --lg-font: "Kaisei Tokumin", serif;
+  --sm-font: "Poppins", sans-serif;
+  --green: #83BD75;
+}
+
+*{
+  box-sizing: border-box;
 }
 
 body {
-    font-family: var(--sm-font);
+  font-family: var(--sm-font);
 }
 
 /* button */
 .bg-primary {
-    background-color: green !important;
+  background-color: var(--green) !important;
 }
 
 .btn:not(.nav-btns button) {
-    background-color: #fff;
-    color: rgb(85, 85, 85);
-    padding: 10px 28px;
-    border-radius: 25px;
-    border: 1px solid rgb(85, 85, 85);
+  background-color: #fff;
+  color: rgb(85, 85, 85);
+  padding: 10px 28px;
+  border-radius: 25px;
+  border: 1px solid rgb(85, 85, 85);
 }
 
 .btn:not(.nav-btns button):hover {
-    background-color: var(--green);
-    color: #fff;
-    border-color: var(--green);
+  background-color: var(--green);
+  color: #fff;
+  border-color: var(--green);
 }
 
 /* text color */
 .text-primary {
-    color: var(--green) !important;
+  color: var(--green) !important;
 }
 
 /* navbar */
 .navbar {
-    -webkit-box-shadow: 0 3px 9px 3px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 3px 9px 3px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 3px 9px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 9px 3px rgba(0, 0, 0, 0.1);
 }
 
 .navbar-brand img {
-    width: 30px;
+  width: 30px;
 }
 
 .navbar-brand span {
-    letter-spacing: 2px;
-    font-family: var(--lg-font);
+  letter-spacing: 2px;
+  font-family: var(--lg-font);
 }
 
 .nav-link:hover {
-    color: var(--green) !important;
+  color: var(--green) !important;
 }
 
 .nav-item {
-    border-bottom: 0.5px solid rgba(0, 0, 0, 0.05);
+  border-bottom: 0.5px solid rgba(0, 0, 0, 0.05);
 }
 
 /* header */
 #header {
-    background: url(./assets/slider3.jpg) top/cover no-repeat;
+  background: url(./assets/slider3.jpg) top/cover no-repeat;
 }
 
 .carousel-inner h1 {
-    font-size: 50px;
-    font-family: var(--lg-font);
+  font-size: 50px;
+  font-family: var(--lg-font);
 }
 
 .carousel-item .btn {
-    border-color: #fff !important;
+  border-color: #fff !important;
 }
 
 .carousel-item .btn:hover {
-    border-color: var(--green) !important;
+  border-color: var(--green) !important;
 }
 
 /* title */
 .title h2::before {
-    position: absolute;
-    content: "";
-    width: 4px;
-    height: 50px;
-    background-color: var(--green);
-    left: -20px;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+  position: absolute;
+  content: "";
+  width: 4px;
+  height: 50px;
+  background-color: var(--green);
+  left: -20px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
+
+
 
 /* collection */
 .active-filter-btn {
-    background-color: var(--green) !important;
-    color: #fff !important;
-    border-color: var(--green) !important;
+  background-color: var(--green) !important;
+  color: #fff !important;
+  border-color: var(--green) !important;
 }
 
 .filter-button-group .btn:hover {
-    color: #fff !important;
+  color: #fff !important;
 }
 
 .collection-img span {
-    top: 20px;
-    right: 20px;
-    width: 46px;
-    height: 46px;
-    border-radius: 50%;
+  top: 20px;
+  right: 20px;
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
 }
 
 .collection-img .cart {
-    opacity: 0;
-    transition: all ease-in 0.1s;
+  opacity: 0;
+  transition: all ease-in 0.1s;
 }
 
 .collection-img .icons {
-    width: 40px;
-    height: 40px;
-    background-color: white;
-    cursor: pointer;
-    transition: all ease-in 0.1s;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  cursor: pointer;
+  transition: all ease-in 0.1s;
 }
 
 .rating {
-    color: var(--pink) !important;
+  color: var(--pink) !important;
 }
 
 .collection-img .cart:hover {
-    opacity: 1;
-    background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.active {
+  color: red !important;
+}
+
+.category-select{
+  padding: 10px;
+  border-radius: 25px;
+  width: 120px;
+  height: 50px;
+  margin: 8px;
 }
 
 .collection-img .icons:hover {
-    background-color: var(--green);
-    color: white;
-    transform: scale(1.2);
+  background-color: var(--green);
+
+  color: white;
+  transform: scale(1.2);
 }
 
 .collect {
-    opacity: 0;
-    animation: comein 1s ease forwards;
+  opacity: 0;
+  animation: comein 1s ease forwards;
+}
+
+.addedMargin {
+  margin-top: 5rem;
+}
+
+/* Shop Category */
+.shop-category {
+  transition: all ease 0.2s;
+  cursor: pointer;
+}
+
+.shop-category img{
+  max-height: 265.5px;
+}
+
+.card-img-overlay {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.shop-category:hover {
+  transform: translateY(-20px);
 }
 
 /* Detail */
 .size label {
-    display: inline-block;
-    width: 70px;
-    padding: 10px;
-    border: solid 2px #ccc;
-    transition: all 0.3s;
-    text-align: center;
-    margin-right: 10px;
-    cursor: pointer;
+  display: inline-block;
+  width: 70px;
+  padding: 10px;
+  border: solid 2px #ccc;
+  transition: all 0.3s;
+  text-align: center;
+  margin-right: 10px;
+  cursor: pointer;
 }
 
-.size input[type=radio] {
-    display: none;
+.size input[type="radio"] {
+  display: none;
 }
 
-.size input[type=radio]:checked + label {
-    border: solid 2px green;
+.size input[type="radio"]:checked + label {
+  border: solid 2px green;
+}
+
+/*Comment*/
+.comment-answer button:hover{
+  background-color: var(--green) !important;
+  color: #fff !important;
+  border-color: transparent;
+}
+
+
+/* select */
+select {
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 /* .collection-img:hover > .overlay {
@@ -170,131 +226,74 @@ body {
     transition: ease-in 0.5s;
 } */
 
-/* special */
-.special-img span {
-    top: 20px;
-    right: 20px;
-    transition: all 0.1s ease-in-out;
-    cursor: pointer;
-    color: transparent !important;
-    stroke: var(--green);
-    stroke-width: 2;
-}
-
-.special-list .btn {
-    padding: 8px 20px !important;
-}
-
-.special-img {
-    -webkit-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-
-.special-img img {
-    width: 100%;
-    -webkit-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-
-.special-img span:hover {
-    color: var(--green) !important;
-    transform: scale(1.2);
-}
-
-.special-img:hover img {
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    transform: scale(1.2);
-}
-
-.special-img:hover {
-    transform: translateY(-20px);
-    box-shadow: 3px 3px 10px 3px rgba(0, 0, 0, 0.1);
-}
 
 /* offers */
 #offers {
-    background: url(./assets/images/discount_img.jpg) center/cover no-repeat;
+  background: url(./assets/images/discount_img.jpg) center/cover no-repeat;
 }
 
 #offers .row {
-    min-height: 60vh;
+  min-height: 60vh;
 }
 
 .offers-content span {
-    font-size: 28px;
+  font-size: 28px;
 }
 
 .offers-content h2 {
-    font-size: 60px;
-    font-family: var(--lg-font);
+  font-size: 60px;
+  font-family: var(--lg-font);
 }
 
 .offers-content .btn {
-    border-color: transparent !important;
+  border-color: transparent !important;
 }
 
 /* about */
 #about {
-    background-color: rgba(179, 179, 179, 0.05);
+  background-color: rgba(179, 179, 179, 0.05);
 }
 
 /* newsletter */
 #newsletter {
-    background-color: rgba(179, 179, 179, 0.05);
+  background-color: rgba(179, 179, 179, 0.05);
 }
 
 #newsletter p {
-    max-width: 600px;
+  max-width: 600px;
 }
 
 #newsletter .input-group {
-    max-width: 500px;
+  max-width: 500px;
 }
 
 #newsletter .form-control {
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
 }
 
 #newsletter .btn {
-    background-color: var(--green);
-    color: #fff;
-    border-color: var(--green);
+  background-color: var(--green);
+  color: #fff;
+  border-color: var(--green);
 }
 
 #newsletter .btn:hover {
-    background-color: #000;
-    border-color: #000;
+  background-color: #000;
+  border-color: #000;
 }
 
-/* footer */
-footer .brand {
-    font-family: var(--lg-font);
-    letter-spacing: 2px;
-}
 
-footer a {
-    -webkit-transition: color 0.3s ease;
-    -o-transition: color 0.3s ease;
-    transition: color 0.3s ease;
-}
-
-footer a:hover {
-    color: var(--green) !important;
-}
 
 @keyframes comein {
-    to {
-        opacity: 1;
-    }
+  to {
+    opacity: 1;
+  }
 }
 
 /* media queries */
-@media(min-width: 992px) {
-    .nav-item {
-        border-bottom: none;
-    }
+@media (min-width: 992px) {
+  .nav-item {
+    border-bottom: none;
+  }
 }
